# FaroBT

./: .gitignore  CMakeLists.txt  CMakeSettings.json  DefaultTableModel.cpp  DefaultTableModel.h  FGUIBuild.cpp  FGUIBuild.h  FUserSite.cpp  FUserSite.h  FaroBT.cpp  FaroBT.h  FaroBT.sln  FaroBT.ui  FaroBT.vcxproj  GUIBuild.cpp  GUIBuild.h  MainResourceFile.qrc  README.md  SideBar.cpp  SideBar.h  SqlConnection.cpp  SqlConnection.h  UserSite.cpp  UserSite.h  UsersSiteBody.ui  main.cpp
data/: DB-Structure.txt  Farbcodes.txt
dep/spdlog/: spdlog.h
forms/: EditUser.ui  FaroBT.ui  UsersSiteBody.ui
include/: DefaultTableModel.h  FaroBT.h  GUIBuild.h  SideBar.h  SqlConnection.h  TVDelegate.h  TableView.h  UserSite.h
include/UserSite/: ContextMenu.h  UserSite.h
src/: DefaultTableModel.cpp  FaroBT.cpp  GUIBuild.cpp  SideBar.cpp  SqlConnection.cpp  TableView.cpp  UserSite.cpp  main.cpp
src/UserSite/: UserSite.cpp
